MULTIPAGE START TO WORK

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <h1>Grid Layout Generator</h1>
             <div class="header-controls" data-pg-collapsed>
+                <div id="page-tabs"></div>
                 <div class="breakpoints">
                     <!-- Breakpoint buttons will be dynamically added here -->
                 </div>
@@ -64,8 +65,10 @@
             </aside>
             <div class="main-grid-area">
                 <div class="grid-container">
-                    <div id="sections-container">
-                        <!-- Sections will be dynamically added here -->
+                    <div id="pages-container">
+                        <div id="sections-container">
+                            <!-- Sections will be dynamically added here -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -93,6 +96,7 @@
                 </div>
             </aside>
         </main>
+        <div id="page-tabs"></div>
         <script src="script.js"></script>
     </body>
 </html>
